src/test/ui/on-unimplemented/on-impl.stderr
error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/on-impl.rs:32:5
   |
32 |     Index::<u32>::index(&[1, 2, 3] as &[i32], 2u32);
   |     ^^^^^^^^^^^^^^^^^^^ a usize is required to index into a slice
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`
note: required by `Index::index`
  --> $DIR/on-impl.rs:19:5
   |
19 |     fn index(&self, index: Idx) -> &Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/on-impl.rs:32:5
   |
32 |     Index::<u32>::index(&[1, 2, 3] as &[i32], 2u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ a usize is required to index into a slice
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`

error: aborting due to 2 previous errors

